# DAT160-prosjekt-gruppe3

./: .gitignore  README.md
bug2_interfaces/action/: ExploreWall.action  GoToPoint.action
bug2_interfaces/srv/: SetWallpoints.srv
comp3/: package.xml  setup.cfg  setup.py
comp3/bug2_interfaces/: CMakeLists.txt  package.xml
comp3/comp3/: bug2_controller.py  comp3.py  gotopoint_controller.py  leader.py  marker_detection.py  marker_map_pose.py  robot_controller.py  wall_classifier.py  wallfollower_controller.py
comp3/launch/: bug2.launch.py  comp3.launch.py
comp3_interfaces/: CMakeLists.txt  package.xml
comp3_interfaces/action/: ExploreWall.action
comp3_interfaces/srv/: SetID4pos.srv  SetWallpoints.srv  Switch.srv  Wallfollow.srv
multi_robot_challenge_23/: setup.py
multi_robot_challenge_23/launch/: spawn_robot.launch.py
multi_robot_challenge_23/multi_robot_challenge_23/: controller.py  robot_handler.py
